[workspace]
members = [
  "game",
  "node",
  "circuit"
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
z4-bevy = { git = "https://github.com/zypher-game/z4-bevy" }
bevy-web3 = { git = "https://github.com/cympletech/bevy-web3" }