[workspace]
members = [
  "game",
  "node",
  "pozk",
  "circuit"
]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
z4-bevy = { git = "https://github.com/zypher-game/z4-bevy.git" }
bevy-web3 = { git = "https://github.com/zypher-game/bevy-web3.git" }
# z4-pozk = { path = "../../z4/z4/pozk" }
