[package]
name = "alien-cake-addict"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.13"
bevy_egui = "0.25"
bevy-web3 = "0.1"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
rand = "0.8"
z4-types = "0.0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Storage",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
z4-bevy = { version = "0.0.1", default-features = false, features = ["wasm"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
z4-bevy = { version = "0.0.1", default-features = false, features = ["ws"] }