[package]
name = "alien-cake-addict-node"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
dotenv = "0.15"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.35"
tracing-subscriber = "0.3"
z4-engine = "0.0.1"
